--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <label for="in">Введит значение:</label>
+        <input type="text" name="in">
+        <input type="button" id="btn" value="Нажми!">
+    </div>
     <script src="main.js"></script>
 </body>
 </html>
